# jobFlow

./: .gitignore  ARCHITECTURE.md  README.md  architecture.puml  design-patterns.puml  execution-flow.puml  pyproject.toml
src/: __init__.py
src/application/: __init__.py  run_script.py
src/domain/: __init__.py  exceptions.py  executor.py  file_provider.py  logging.py  models.py
src/infrastructure/: __init__.py
src/infrastructure/executors/: __init__.py  lambda_exec.py  local.py  worker.py
src/infrastructure/file_providers/: __init__.py  composite.py  http.py  local.py  s3.py
src/infrastructure/logging/: __init__.py  composite.py  sse.py  stdout.py
